# i3_prepare_workspace

./: CMakeLists.txt  Makefile  README.md  create_window_n_run_stuff.py  open_terminal.sh  prefill_prompt.cpp
examples/: create_window_n_run_stuff.py
